Further changes the manuscript

--- a/tim liz paper draft.tex
+++ b/tim liz paper draft.tex
@@ -245,19 +245,16 @@ While specifying the models had to be done by hand, the calculation of the solut
 
 \subsection{Simulation Model}
 
-In order validate the methods we developed a spatially explicit simulations of animal movement. By simulating animal movement with various movement patterns with a continuous space containing sensors, we calculated how many animal contacts the sensors would have detected. 
+In order to validate the gREM we developed a spatially explicit simulation of animal movement. By simulating animal movement with various movement patterns within a continuous space containing sensors we calculated how many animal contacts the sensors would have detected. 
 
-
-
-Each simulation consisted of a  \SI{7.5}{\kilo\meter} by \SI{7.5}{\kilo\meter} square (with periodic boundaries) and was populated with a density of \SI{70}{\animals\per\kilo\meter\squared} to match an expected maximum density of mammals in the wild \citep{damuth1981population}, creating a total of 3937 animals per simulation randomly placed at the start of the simulation. Animal movement was simulated with a simple movement model, characterised by a random movement distance for each discrete time step of 15 minutes at the end of each step the animal can change direction up to a maximum specified angle. The simulation lasted for $N$ steps of duration $T$ during which the animals moved with an average speed, $v$. The distance travelled in each time step, $d$, was sampled from a Normal distribution with mean distance, $\mu_d = vT$,  and standard deviation $\sigma_d = vT/10$. An average speed, $v = $ \SI{40}{\kilo\meter \per \day}, was chosen as this represents the largest day range of terrestrial animals \citep{carbone2005far}, and represents the upper limit of realistic speeds. To reduce computation effort, a single set of 100 simulations was run at the high animal density for a long duration. 
+Each simulation consisted of a  \SI{7.5}{\kilo\meter} by \SI{7.5}{\kilo\meter} square (with periodic boundaries) and was populated with a density of \SI{70}{\animals\per\kilo\meter\squared} to match an expected maximum density of mammals in the wild \citep{damuth1981population}, creating a total of 3937 animals per simulation which were placed randomly at the start of the simulation. Animal movement was simulated with a simple movement model, characterised by a random movement distance for each discrete time step, at the end of each step the animal could change direction with a uniform distribution up to a maximum specified angle. The simulation lasted for $N$ steps of duration $T$ during which the animals moved with an average speed, $v$. The distance travelled in each time step, $d$, was sampled from a Normal distribution with mean distance, $\mu_d = vT$,  and standard deviation $\sigma_d = vT/10$. An average speed, $v = $ \SI{40}{\kilo\meter \per \day}, was chosen as this represents the largest day range of terrestrial animals \citep{carbone2005far}, and represents the upper limit of realistic speeds. To reduce computation effort, a single set of 100 simulations was run for a long duration which could be subsampled. 
 
 %We applied the analytical models to these data and compared it to the known input animal density in the simulation. We then tested whether the estimates were accurate (unbiased) and examined how precise they were.
 
-Animal were counted as they moved in and out of the detection zone of stationary detectors in the simulation. Multiple detectors were set up in each simulation with varying focal angles and radii, and the results recorded separately. From this one set of simulations, data for all call and detection angle parameter values could be computed by subsampling. The details of each individual capture event, including the angle between the animals heading and the sensor were saved from the simulations.  From this the number of capture events was calculated for different call widths.
-The total number of capture events were counted for each simulation and each set of parameters and the analytical model applied to the results in order to estimate the density in the simulation. From this the difference between the true and estimated densities were used to evaluate the bias in the analytical models. If the analytical models are correct the mean difference between the two values were expected to converge to zero as sample size increases. For each of the 100 simulations we calculate the error (the difference between the known and estimated density) and so we got a distribution of errors which was approximately normal. We constructed box plots of the estimates error to graphically test for significant differences between the true and estimated densities. 
+Animal were counted as they moved in and out of the detection zone of stationary detectors in the simulation. Multiple detectors were set up in each simulation with varying focal angles, and the results recorded separately. The details of each individual capture event, including the angle between the animals heading and the sensor were saved from the simulations.  From this the number of capture events was calculated for different call widths. The total number of capture events were summed for each simulation and each set of parameters and the analytical model applied to the results in order to estimate the density in the simulation. From this the difference between the true and estimated densities were used to evaluate the bias in the analytical models. If the analytical models are correct the mean difference between the two values were expected to converge to zero as sample size increases. For each of the 100 simulations we calculate the error (the difference between the known and estimated density) and so we got a distribution of errors which was approximately normal. We constructed box plots of the estimates error to graphically test for significant differences between the true and estimated densities. 
 
-We tested all the models to demonstrate the accuracy and precision while the assumptions of the model were met. But whilst demonstrating the accuracy and precision over with reduced data, and when model assumptions are broken four models were chosen (models NW1, SW1, NE1, and SE3). These models were chosen as they represent one model from each quadrant of Figure~\ref{f:equalModelResults}. The accuracy and precision of all models in the gREM follow the same pattern as the four that we have shown in the main text. 
-Further simulations were run where the assumption of the analytical models have not been met in order to see whether the model was still accurate when these assumptions were broken. We specifically looked at a a non-continuous movement, and a range of correlated random walks, both of which would be seen in real field conditions.
+All the derived models were tested to demonstrate the accuracy and precision of the gREM while the assumptions of the analytical models were met. We selected four example models (models NW1, SW1, NE1, and SE3, where these names refer to Figure 1 in Appendix S1), whilst demonstrating the accuracy and precision with low captures rates, and the accuracy and precision when movement patterns broke the model assumptions.  We specifically looked at a non-continuous movement, and a range of correlated random walks, both of which would be seen in real field conditions. The four models were chosen as they represent one model from each quadrant of Figure~\ref{f:equalModelResults}. The accuracy and precision of all the derived models in the gREM follow the same pattern as the four that have been shown in the main text. 
+
 
 \section{Results}
 
@@ -306,6 +303,7 @@ For each model we compared the estimated densities to the true densities in a si
 
 The precision of the model is dependent on the number of captures during the survey. In Figure~\ref{f:Captures} we can see that the model precision gets greater as the number of captures increase. As the number of captures reaches about 100 then the coefficient of variation falls below 10\% which could be considered negligible. %The number of captures is highly dependent on the speed of the animals, the size of the detection zone, and the length of the survey, as these values increase the number of captures is also likely to increase. 
 
+\subsubsection{Accuracy, and precision, of gREM when animal movement is not consistent with model assumptions}
 
  Simulating start-stop instead of continuous movement had no effect the accuracy, or the precision, of the estimates (Figure~\ref{f:Perch}) as long as the true overall speed of the animal is known. Relaxing straight line movement to allow random or correlated random walks did not effect the accuracy of the method (Figure~\ref{f:Tort}). We allowed animals to change direction up to a maximum value at the end of each step, picked from a uniform distribution where the maximum angle ranged from 0 to $\pi$, which corresponds to straight line movement and random walk respectively. There is no significant difference in the variance for the change, this could be because of the between the step length of the animal movement, 15 minutes, means that immediate double counting of the same animal is unlikely.  In the case where large directional changes are likely to occur within short periods of time leading to double counting of the same animal within a short period of time may need to be adjusted because of this. 
 
@@ -346,7 +344,11 @@ Although we have used simulations to validate these models, much more robust tes
 There are a numb of positive extensions to the gREM which could be developed in the future. The original gas model was formulated for the case where both subjects, either animal and detector, or animal and animal, are moving \citep{Hutchinson_Waser_2007}. Indeed any of the models with animals that are equally detectable in all directions ($\alpha = 2\pi$) can be trivially expanded for moving by substituting the sum of the average animal velocity and the sensor velocity for $v$ as used here. However, when the animal has a directional call, the extension becomes much less simple. The approach would be to calculate again the mean profile width. However, for each angle of approach, one would have to average the profile width for an animal facing in any direction (i.e. not necessarily moving towards the sensor) weighted by the relative velocity of that direction. There are a number of situations where a moving detector and animal could occur and as such may be advantage to have a method of estimating densities from the data collected, e.g. an acoustic detector based off a boat when studying Cetacea or sea birds \citep{yack2013passive}.
 
 Another interesting, and so far unstudied problem, is edge effects caused by trigger delays (the delay between sensing an animal and attempting to record the encounter) and time expansion acoustic detectors which repeatedly turn on an off during sampling. Both of these have potential biases as animals can move through the detection zone without being detected. The models herein are formulated assuming constant surveillance and so the error quickly becomes negligible. For example, if it takes longer for the recording device to be switched on than the length of some animal calls there could be a systematic underestimation of density. 
-                  
+
+%%%% ------- Acknowledgments ---------%%%%
+\section{Acknowledgments}
+
+
 
 \bibliographystyle{mee.bst}	
 \bibliography{lucas-moorcroft-etal-refs.bib}	
