more changes to the simulation methods

--- a/tim liz paper draft.tex
+++ b/tim liz paper draft.tex
@@ -251,9 +251,9 @@ Each simulation consisted of a  \SI{7.5}{\kilo\meter} by \SI{7.5}{\kilo\meter} s
 
 %We applied the analytical models to these data and compared it to the known input animal density in the simulation. We then tested whether the estimates were accurate (unbiased) and examined how precise they were.
 
-Animal were counted as they moved in and out of the detection zone of stationary detectors in the simulation. Multiple detectors were set up in each simulation with varying focal angles, and the results recorded separately. The details of each individual capture event, including the angle between the animals heading and the sensor were saved from the simulations.  From this the number of capture events was calculated for different call widths. The total number of capture events were summed for each simulation and each set of parameters and the analytical model applied to the results in order to estimate the density in the simulation. From this the difference between the true and estimated densities were used to evaluate the bias in the analytical models. If the analytical models are correct the mean difference between the two values were expected to converge to zero as sample size increases. For each of the 100 simulations we calculate the error (the difference between the known and estimated density) and so we got a distribution of errors which was approximately normal. We constructed box plots of the estimates error to graphically test for significant differences between the true and estimated densities. 
+Animals were counted as they moved in and out of the detection zone of stationary detectors in the simulation. Multiple detectors were set up in each simulation with varying detection angles with the results recorded separately. The details of each individual capture event, including the angle between the animals heading and the sensor, were saved from this information the number of capture events can be calculated for a given call angle. The total number of these detections were summed for each set of parameters in the simulation, the gREM was then applied in order to estimate the density in the simulation. The difference between the true input density and density estimated by the gREM were used to evaluate the bias in the analytical models. If the gREM is correct the mean difference between the two values were expected to converge to zero as sample size increases. For each of the 100 simulations we calculate the error (the difference between the known and estimated density) and so we got a distribution of errors which was approximately normal. We constructed boxplots of the estimates error to graphically test for significant differences between the true and estimated densities. 
 
-All the derived models were tested to demonstrate the accuracy and precision of the gREM while the assumptions of the analytical models were met. We selected four example models (models NW1, SW1, NE1, and SE3, where these names refer to Figure 1 in Appendix S1), whilst demonstrating the accuracy and precision with low captures rates, and the accuracy and precision when movement patterns broke the model assumptions.  We specifically looked at a non-continuous movement, and a range of correlated random walks, both of which would be seen in real field conditions. The four models were chosen as they represent one model from each quadrant of Figure~\ref{f:equalModelResults}. The accuracy and precision of all the derived models in the gREM follow the same pattern as the four that have been shown in the main text. 
+All the derived models were tested to demonstrate the accuracy and precision of the gREM while the assumptions of the analytical models were met. We selected four example models (models NW1, SW1, NE1, and SE3, where these names refer to Figure 1 in Appendix S1) for demonstrating the accuracy and precision of the gREM with low captures rates, and the accuracy and precision when movement patterns brake the assumptions of the gREM.  We specifically looked at a non-continuous movement, and a range of correlated random walks, both of which would be seen in real field conditions. The four models were chosen as they represent one model from each quadrant of Figure~\ref{f:equalModelResults}. The accuracy and precision of all the derived models in the gREM follow the same pattern as the four that have been shown in the main text. 
 
 
 \section{Results}
@@ -303,7 +303,7 @@ For each model we compared the estimated densities to the true densities in a si
 
 The precision of the model is dependent on the number of captures during the survey. In Figure~\ref{f:Captures} we can see that the model precision gets greater as the number of captures increase. As the number of captures reaches about 100 then the coefficient of variation falls below 10\% which could be considered negligible. %The number of captures is highly dependent on the speed of the animals, the size of the detection zone, and the length of the survey, as these values increase the number of captures is also likely to increase. 
 
-\subsubsection{Accuracy, and precision, of gREM when animal movement is not consistent with model assumptions}
+\subsubsection{Use of the gREM when animal movement is not consistent with model assumptions}
 
  Simulating start-stop instead of continuous movement had no effect the accuracy, or the precision, of the estimates (Figure~\ref{f:Perch}) as long as the true overall speed of the animal is known. Relaxing straight line movement to allow random or correlated random walks did not effect the accuracy of the method (Figure~\ref{f:Tort}). We allowed animals to change direction up to a maximum value at the end of each step, picked from a uniform distribution where the maximum angle ranged from 0 to $\pi$, which corresponds to straight line movement and random walk respectively. There is no significant difference in the variance for the change, this could be because of the between the step length of the animal movement, 15 minutes, means that immediate double counting of the same animal is unlikely.  In the case where large directional changes are likely to occur within short periods of time leading to double counting of the same animal within a short period of time may need to be adjusted because of this. 
 
