--- a/tim liz paper draft.tex
+++ b/tim liz paper draft.tex
@@ -16,7 +16,7 @@
 \linenumbers
 \doublespacing
 
-\usepackage[sort&compress,comma]{natbib}
+\usepackage[compress,semicolon]{natbib}
 
 
 
@@ -92,16 +92,16 @@ marcus.rowcliffe@ioz.ac.uk
 
 \section{Introduction}
 
-Animal population size is one of the fundamental measures needed in ecology and conservation. The absolute size of a population has important implications for a range of issues such as genetic diversity \citep{o1985genetic, fischer2000genetic, willi2005threefold}, sensitivity to stochastic fluctuations \citep{wright1983stochastic, richter1972extinction} and risk of extinction \citep{purvis2000predicting}. However, many authors highlight the need to consider detectability when estimating density, since failure to do so will usually give biased results. In particular, this bias has been highlighted as a problem for the interpretation of count rates from sensors such as camera traps \citep{jennelle2002use, foster2012critique}.
+Animal population size is one of the fundamental measures needed in ecology and conservation. The absolute size of a population has important implications for a range of issues such as genetic diversity \citep{o1985genetic, fischer2000genetic, willi2005threefold}, sensitivity to stochastic fluctuations \citep{richter1972extinction,wright1983stochastic} and risk of extinction \citep{purvis2000predicting}. However, many authors highlight the need to consider detectability when estimating density, since failure to do so will usually give biased results. In particular, this bias has been highlighted as a problem for the interpretation of count rates from sensors such as camera traps \citep{jennelle2002use, foster2012critique}.
 
-The methods for sampling populations are varied. Traditionally, human surveyors collecting data were the primary method, but sensor technology, such as camera traps \citep{ahumada2011community, rowcliffe2008surveys} and acoustic detectors \citep{ofarrel1999comparison, jones2011indicator, mellinger2007fixed} are becoming increasingly used to survey animal populations.  Sensors are growing in popularity, as they are efficient, relativity cheap and non-invasive \citep{gese2001monitoring, o2003crouching, silveira2003camera}. With respect to efficiency, the use of autonomous sensors allows for surveys over large areas and long periods. 
+The methods for sampling populations are varied. Traditionally, human surveyors collecting data were the primary method, but sensor technology, such as camera traps \citep{rowcliffe2008surveys,ahumada2011community} and acoustic detectors \citep{ofarrel1999comparison,mellinger2007fixed,jones2011indicator} are becoming increasingly used to survey animal populations.  Sensors are growing in popularity, as they are efficient, relativity cheap and non-invasive \citep{gese2001monitoring, o2003crouching, silveira2003camera}. With respect to efficiency, the use of autonomous sensors allows for surveys over large areas and long periods. 
 
-Some species are much more easily detected or identified by acoustic detectors. For example, while bat identification by hand requires much training, methods are being developed to automatically identify species from their calls \citep{walters_2012, Adams_2010}. With respect to distance (or the radius of detection), large Cetaceans are loud enough to detected from tens of kilometres away, further than is possible visually \citep{clark1995application, barlow2005estimates, mcdonald2004difar}.  
+Some species are much more easily detected or identified by acoustic detectors. For example, while bat identification by hand requires much training, methods are being developed to automatically identify species from their calls \citep{Adams_2010,walters_2012}. With respect to distance (or the radius of detection), large Cetaceans are loud enough to detected from tens of kilometres away, further than is possible visually \citep{clark1995application, mcdonald2004difar,barlow2005estimates}.  
 
 
 However, the problem of converting sampled count data to estimates of density remains. The preferred method for estimating density if individuals can be recognised is capture-recapture e.g. \citep{karanth1995, trolle2003estimation, soisalo2006estimating, trolle2007camera}. If individual recognition is impossible but the distance between animal and sensor can be estimated, distance sampling methods can be used to estimate density, although these often ignore animal movement which may bias estimates \citep{barlow2005estimates, marques2011estimating}. Finally, methods for density estimation, based on ideal gas models (originally formulated by physicists to estimate contact rates between molecules) have been developed \citep{yapp1956theory, Hutchinson_Waser_2007}. The gas model has been modified for use with camera traps, which have an angle of detection (the angle within which an animal can be detected)  up to $\pi$ radians \citep{rowcliffe2008estimating}. This angle limitation may not apply to acoustic sensors. Furthermore, animal calls may be directional, and the existing random encounter model (REM) designed for camera trap data does not handle this case.
 
-In this study we create a generalised REM (gREM), as an extension to the camera trap model of \cite{rowcliffe2008estimating}, to estimate absolute density from count data from acoustic detectors, or camera traps, where the sensor angle can vary from 0 to $2\pi$ radians, and the acoustic signal given off from the animal can be directional (we call the width of an animals acoustic call the call angle).  We tested the model using simulations in order to assess the validity of the models and in order to give suggestions for best practice. Specifically, we test that the analytical model can accurately predict density when the assumptions of a homogeneous environment and straight-line animal movement are met. We went on to test the accuracy of the model if the assumptions about animal movement were broken, including non-continuous movement and correlated and random walks. 
+In this study we create a generalised REM (gREM), as an extension to the camera trap model of \citep{rowcliffe2008estimating}, to estimate absolute density from count data from acoustic detectors, or camera traps, where the sensor angle can vary from 0 to $2\pi$ radians, and the acoustic signal given off from the animal can be directional (we call the width of an animals acoustic call the call angle).  We tested the model using simulations in order to assess the validity of the models and in order to give suggestions for best practice. Specifically, we test that the analytical model can accurately predict density when the assumptions of a homogeneous environment and straight-line animal movement are met. We went on to test the accuracy of the model if the assumptions about animal movement were broken, including non-continuous movement and correlated and random walks. 
 
 \section{Methods}
 
@@ -144,7 +144,7 @@ We then consider relative velocity from the reference frame of the animals so th
 However, in practice we have the opposite situation. We know the number of encounters and want to estimate the density. We do this by simply rearranging to get D = z/2rvt.
 For different values of $\theta$ and $\alpha$, the only thing that changes is that the area covered per unit time is no longer given by $2rv$. Instead of the sensor having a diameter of $2r$, the sensor has a complex diameter that changes with approach angle. If we call this average diameter the profile $p$, the rest of the derivation is just calculating this value for all values of $\theta$ and $\alpha$. However, there is not one equation that models any combination of these parameters. Instead, different areas of parameter space have different models which must be derived separately. Therefore we have to identify the regions for which the derivation is the same, and then separately derive $p$ for each region. 
 
-Many of these models have the same functional form, and are therefore grouped together as can be seen in figure \ref{f:equalModelResults}, all of the sub models can be seen in Figure 1 in Appendix S1. The upper right  corner of figure \ref{f:equalModelResults} being the gas model as derived above and `REM' is the model from \cite{rowcliffe2008estimating}. 
+Many of these models have the same functional form, and are therefore grouped together as can be seen in figure \ref{f:equalModelResults}, all of the sub models can be seen in Figure 1 in Appendix S1. The upper right  corner of figure \ref{f:equalModelResults} being the gas model as derived above and `REM' is the model from \citep{rowcliffe2008estimating}. 
 
 When the detection angle is smaller than $\pi$ we need to explicitly write functions for the width of the profile for every approach angle. We then use these functions to find the average profile for all approach angles by integrating across all $2\pi$ angles of approach and dividing by $2\pi$. In practice, as the models are all left/right symmetrical we can integrate across $\pi$ angles of approach and divide by $\pi$.
 
@@ -328,7 +328,7 @@ The precision of the model is dependent on the number of captures during the sur
 \section{Discussion}
 
 
-We have developed the gREM such that it can be used to estimate density from acoustic and optical sensors. This has entailed a generalisation of the gas model and the model in \cite{rowcliffe2008estimating} to be applicable to any combination of sensor width and call directionality. We have used simulations to show, as a proof of principle, that these models are accurate and precise.
+We have developed the gREM such that it can be used to estimate density from acoustic and optical sensors. This has entailed a generalisation of the gas model and the model in \citep{rowcliffe2008estimating} to be applicable to any combination of sensor width and call directionality. We have used simulations to show, as a proof of principle, that these models are accurate and precise.
 
 The gREM is therefore available for the estimation of density of a number of taxa of importance to conservation, zoonotic diseases and ecosystem services. The models provided are suitable for certain groups for which there are currently no, or few, effective methods for density estimation. Any species that would be consistently recorded at least once when within range of a detector would be a suitable subject for the gREM, such as bats \citep{kunz2009methods}, songbirds \citep{buckland2006point}, Cetaceans \citep{marques2009estimating} or forest primates \citep{hassel2008reliable}. Within increasing technological capabilities, this list of species is likely to increase dramatically.
 
