Reference capital letters fixed.

--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -41,7 +41,7 @@
 	Number = {03},
 	Pages = {410--419},
 	Publisher = {Cambridge Univ Press},
-	Title = {Monitoring an Endangered savannah ungulate, Grevy's zebra (\emph{Equus grevyi}): choosing a method for estimating population densities},
+	Title = {Monitoring an Endangered savannah ungulate, {Grevy}'s zebra (\emph{Equus grevyi}): choosing a method for estimating population densities},
 	Volume = {47},
 	Year = {2013}}
 
@@ -65,7 +65,7 @@
 	Number = {4},
 	Pages = {1982--1994},
 	Publisher = {Acoustical Society of America},
-	Title = {Estimating cetacean population density using fixed passive acoustic sensors: An example with Blainville's beaked whales},
+	Title = {Estimating cetacean population density using fixed passive acoustic sensors: An example with {Blainville}'s beaked whales},
 	Volume = {125},
 	Year = {2009}}
 
@@ -227,7 +227,7 @@
 	Number = {4},
 	Pages = {487--496},
 	Publisher = {Elsevier},
-	Title = {Estimating the density of a jaguar population in the Brazilian Pantanal using camera-traps and capture--recapture sampling in combination with {GPS} radio-telemetry},
+	Title = {Estimating the density of a jaguar population in the {Brazilian Pantanal} using camera-traps and capture-recapture sampling in combination with {GPS} radio-telemetry},
 	Volume = {129},
 	Year = {2006}}
 
@@ -236,7 +236,7 @@
 	Journal = {Journal of mammalogy},
 	Number = {2},
 	Pages = {607--614},
-	Title = {Estimation of ocelot density in the Pantanal using capture-recapture analysis of camera-trapping data},
+	Title = {Estimation of ocelot density in the {Pantanal} using capture-recapture analysis of camera-trapping data},
 	Volume = {84},
 	Year = {2003}}
 
@@ -275,7 +275,7 @@
 	Journal = {Endangered Species Research},
 	Number = {3},
 	Pages = {163--172},
-	Title = {Estimating North Pacific right whale (\emph{Eubalaena japonica}) density using passive acoustic cue counting},
+	Title = {Estimating {North Pacific} right whale (\emph{Eubalaena japonica}) density using passive acoustic cue counting},
 	Volume = {13},
 	Year = {2011}}
 
@@ -1145,7 +1145,7 @@
 	Number = {4},
 	Pages = {2255--2265},
 	Publisher = {Genetics Soc America},
-	Title = {A threefold genetic allee effect population size affects cross-compatibility, inbreeding depression and drift load in the self-incompatible ranunculus reptans},
+	Title = {A threefold genetic allee effect population size affects cross-compatibility, inbreeding depression and drift load in the self-incompatible \emph{Ranunculus reptans}},
 	Volume = {169},
 	Year = {2005}}
 
@@ -1793,7 +1793,7 @@
 	Journal = {Acta Chiropterologica},
 	Number = {1},
 	Pages = {231-245},
-	Title = {Reliable Automation Of Bat Call Identification For {Eastern New South Wales, Australia}, Using Classification Trees And Anascheme Software},
+	Title = {Reliable Automation Of Bat Call Identification For {Eastern New South Wales, Australia}, Using Classification Trees And {Anascheme} Software},
 	Unique-Id = {Isi:000278753700018},
 	Volume = {12},
 	Year = {2010},
