Some small edits

--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -73,7 +73,7 @@
 	Author = {Hassel-Finnegan, Heather M and Borries, Carola and Larney, Eileen and Umponjan, Mayuree and Koenig, Andreas},
 	Date-Added = {2014-05-16 11:19:41 +0000},
 	Date-Modified = {2014-05-16 11:19:41 +0000},
-	Journal = {International journal of primatology},
+	Journal = {International Journal of Primatology},
 	Number = {5},
 	Pages = {1175--1187},
 	Publisher = {Springer},
@@ -3666,7 +3666,7 @@ The seasonal movements of Eidolon helvum, Myonycteris torquata, and Nanonycteris
 	Number = {2},
 	Pages = {227--233},
 	Publisher = {Elsevier},
-	Title = {The Attachment Protein of Hendra Virus Has High Structural Similarity but Limited Primary Sequence Homology Compared with Viruses in the Genus< i> Paramyxovirus</i>},
+	Title = {The Attachment Protein of Hendra Virus Has High Structural Similarity but Limited Primary Sequence Homology Compared with Viruses in the Genus \emph{Paramyxovirus}},
 	Volume = {251},
 	Year = {1998}}
 
